# AMMesh

./: CMakeLists.txt
example/hw1/: out.txt  out3.txt
include/Math/: Mrgb.h
src/hw1/: Algorithm.cpp  Algorithm.h  main.cpp
src/hw2/: main.cpp
src/hw3/: amain.cpp  bmain.cpp  cmain.cpp  main.cpp
src/hw5/: arap_parameterizations.cpp  workspace.code-workspace
src/hw7/: main.cpp
src/hw9/: README  bmain.cpp  main.cpp
